# ai-tools

./: .conf  .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  Nginx-Dockerfile  Pipfile  Problem_Statement_Project_New.xlsx  Project_Problem_Statement.xlsx  README.md  RetrivelCode.py  ansible.cfg  api.py  app.py  config.json  contribution.md  customAsyncTTL.py  deploy.sh  docker-compose-generated.yaml  docker-compose-independent-generated.yaml  docker-compose-restructure.yml  docker-compose.yaml  docker-compose.yml  dump  env_template.j2  faq.md  final_03.py  generate.sh  generate_independent_docker.sh  heath_response.py  inventory.ini  post_req_azure.py  post_req_coref.py  prometheus.yml  pyproject.toml  repository_data.json  requirements.txt  sagemake.md  sagemaker.md  (+12 more)
.github/workflows/: build-and-push.yml  gh-packages-parallel.yml  gh-packages.yaml
aitools/: Open_ai_embeddings.py  __init__.py  core.py  sim.py  utils.py
aitools/Speech_lang_detection/: README.md
aitools/Speech_to_text/: README.md
aitools/Text_embeddings/: README.md
aitools/Text_lang_detection/: README.md
aitools/Text_translation/: README.md
demo/chatPDF/: CONTRIBUTING.md  README.md  package-lock.json  package.json  turbo.json
docs/: plan.md
flake8/: __init__.py  setup.py  single_word_module.py
myenvp/: pyvenv.cfg
myenvp/Scripts/: activate  activate.bat
playground/: .gitignore  CONTRIBUTING.md  lerna.json  package.json
src/: utils.py
src/DictAugmentTransformers/: augmenting transformers with dict.py  deploy.sh  requirements.txt
src/HF_text_classification/: README.md
src/Text_embeddings/: Embeddings theme.md
src/Text_to_speech/: README.md
src/Vector_search/: README.md
src/agri_content_recognition/: deploy.sh  inference.py  requirements.txt
src/asr/: MMS_ASR_Inference_Colab.ipynb
src/bhasini_remote/: Dockerfile  api.py  docker-compose.yaml  model.py
src/chunking/: README.md
src/coref/: README.md  Training data.txt  __init__.py
src/dsp/: README.md
src/embeddings/: README.md
src/search/: README.md  __init__.py
src/text_transliteration/: README.md
src/topic_modelling/: README.md
src/weather_update/: README.md
src/youtube_embedding/: Dockerfile  (+4 more)
(+393 files in other folders)
