[tool.poetry]
name = "aitools"
version = "0.1.0"
description = "AI Tooling to bootstrap applications fast"
authors = ["Tushar <codingid6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
quart = "^0.18.3"
flask = "^2.2.3"
inference = "^0.1"
flake8 = "^6.0.0"
openai-async = "^0.0.3"
openai = "^0.27.4"
async-cache = "^1.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
