[tool.poetry]
name = "aitools"
version = "0.1.0"
description = "AI Tooling to bootstrap applications fast"
authors = ["Tushar <codingid6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
quart = "^0.18.3"
flask = "^2.2.3"
inference = "^0.1"
flake8 = "^6.0.0"
openai-async = "^0.0.3"
openai = "^0.27.4"
async-cache = "^1.1.1"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"
sklearn = "^0.0.post1"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
spacy-experimental = "0.6.2"
en-coreference-web-trf = {url = "https://github.com/explosion/spacy-experimental/releases/download/v0.6.1/en_coreference_web_trf-3.4.0a2-py3-none-any.whl"}
pipdeptree = "2.0.0"
quart-compress = "^0.2.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
